jwt auth integration

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,6 @@
 MONGO_URI="mongodb+srv://uffanmehmoodkhan02:SQJy4bW8KvflZkdG@cluster0.jxbpwav.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0;"
+JWT_SECRET=todo_list_express_jwt_secret
+JWT_REFRESH_SECRET=todo_listexpress_refresh_jwt_secret
+JWT_EXPIRATION=15m
+JWT_REFRESH_EXPIRATION=7d
+PORT=5000
