--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI="mongodb+srv://uffanmehmoodkhan02:SQJy4bW8KvflZkdG@cluster0.jxbpwav.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0;"
+MONGO_URI="mongodb+srv://uffanmehmoodkhan02:SQJy4bW8KvflZkdG@cluster0.jxbpwav.mongodb.net/todo?retryWrites=true&w=majority&appName=Cluster0;"
 JWT_SECRET=todo_list_express_jwt_secret
 JWT_REFRESH_SECRET=todo_listexpress_refresh_jwt_secret
 JWT_EXPIRATION=15m
