--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "init": "^0.1.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "socket.io": "^4.8.1"
   },
   "name": "backend",
   "version": "1.0.0",
@@ -26,5 +27,10 @@
   "type": "commonjs",
   "devDependencies": {
     "nodemon": "^3.1.10"
-  }
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.9",
+    "utf-8-validate": "^6.0.5"
+  },
+  "proxy": "http://localhost:3000"
 }
